# smolcluster

./: .coverage  .gitignore  README.md  launch.sh  launch_edp.sh  launch_edp_demo.sh  launch_edp_gpt.sh  launch_edp_train_gpt.sh  launch_inference_syncps.sh  launch_mp_inference.sh  launch_mp_train_gpt.sh  launch_syncps.sh  launch_syncps_demo.sh  launch_syncps_gpt.sh  pyproject.toml
.config/: nodes.yaml
.github/: FUNDING.yml
dashboard/: __init__.py  __main__.py  node_manager.py  server.py
dashboard/frontend/: app.js  index.html  styles.css
dashboard/frontend/css/: base.css  controls.css  dark.css  dashboard.css  generation.css  setup.css
dashboard/frontend/js/: actions.js  generation.js  helpers.js  log.js  render.js  topology-draw.js  topology-layout.js  topology-nodes.js  topology-scene.js  ui-persistence.js  views.js
dashboard/frontend/js/core/: boot.js  state.js
dashboard/frontend/js/data/: metrics.js  nodes.js  sse.js
dashboard/frontend/js/generation/: generation-send.js
dashboard/frontend/js/log/: log-append.js  log-parse.js
dashboard/frontend/js/topology/: topology-connections.js  topology-drag.js  topology-draw-nodes.js  topology-draw-particles.js  topology-draw.js  topology-layout.js  topology-overlays.js  topology-state.js
dashboard/frontend/js/ui/: actions.js  config-modal.js  setup-tracks.js  ui-persistence.js
dashboard/node_manager/: __init__.py  _cleanup.py  _constants.py  _infer_launch.py  _lifecycle.py  _manager.py  _ssh.py  _train_launch.py  constants.py  manager.py  ssh.py
dashboard/node_manager/launch/: __init__.py  infer.py  train.py
dashboard/node_manager/lifecycle/: __init__.py  cleanup.py  lifecycle.py
dashboard/server/: __init__.py  _app.py  _broadcasters.py  _ctx.py  _helpers.py  _models.py  _node_meta.py  _paths.py  _redis.py  _routes_inference.py  _routes_misc.py  _routes_nodes.py  _routes_training.py  _sse.py  _ssh_config.py  app.py  broadcasters.py  ctx.py  helpers.py  models.py  node_meta.py  paths.py  redis.py  sse.py  ssh_config.py
dashboard/server/routes/: __init__.py  inference.py  misc.py  nodes.py  training.py
docs/: api.md  configuration.md  inference.md  logging.md  manual.md  networking.md  quickstart.md  setup_cluster.md  setup_network.md  training.md
grove/: .gitignore  LICENSE  README.md  pyproject.toml
grove/examples/: distributed_train.py  distributed_train_torch.py  grpo.py  train.py
grove/grove/: LICENSE  __init__.py  _init.py  _ops.py  _utils.py  cli.py  cluster.py  comm.py  compress.py  control.py  coordinator.py  dashboard.py  demo.py  diloco.py  group.py  membership.py  mlx_comm.py  sparseloco.py  tui.py
grove/grove/algorithms/: __init__.py  ring.py
grove/grove/store/: __init__.py  base.py  tcp_store.py
grove/grove/swift/: compile.py
grove/grove/transport/: __init__.py  base.py  hybrid.py  p2p.py  socket_conn.py  tcp.py
grove/tests/: conftest.py  test_control.py  test_demo.py  test_diloco.py  test_e2e.py  test_edge_cases.py  test_mlx.py  test_p2p.py  test_sparseloco.py
logging/: docker-compose.yml  loki-config.yaml  promtail-config.yaml  promtail-server-remote.yaml  promtail-worker-remote.yaml
scripts/: download_model.py  launch_dp_train_gpt.sh  launch_edp_demo.sh  launch_edp_train_gpt.sh  launch_fsdp_train_gpt.sh  launch_mp_inference.sh  launch_mp_local.sh  launch_mp_no_ps_train_gpt.sh  launch_mp_nops_train_gpt.sh  launch_mp_pipeline_train_gpt.sh  launch_mp_train_gpt.sh  launch_syncps_demo.sh  launch_syncps_train_gpt.sh  reorganize_qwen_ckpts_on_hf.py  upload_checkpoints_to_hf.py  upload_ckpts_as_separate_repos.py  upload_lfm_ckpts_to_hf.py  upload_lfm_eval_rollouts_to_hf.py
scripts/inference/: launch_api.sh  launch_inference.sh  launch_mp_inference.sh
scripts/inference/data_parallelism/: launch_classicdp_inference.sh  launch_syncps_inference.sh
scripts/inference/model_parallelism/: launch_mp_inference.sh
scripts/installations/: discover_network.sh  installation.sh  nodes.yaml.example  setup_jetson.sh  setup_ssh.sh
scripts/lib/: logging_helpers.sh  node_helpers.sh
scripts/training/: launch_dp_train_gpt.sh  launch_edp_demo.sh  launch_edp_train_gpt.sh  launch_ep_train_gpt.sh  launch_ep_train_moe.sh  launch_fsdp_train_gpt.sh  launch_mp_local.sh  launch_mp_pipeline_train_gpt.sh  launch_mp_train_gpt.sh  launch_syncps_demo.sh  launch_syncps_train_gpt.sh
src/data/coremlmodel/gpt2_rank0.mlpackage/: Manifest.json
src/data/coremlmodel/gpt2_rank2.mlpackage/: Manifest.json
src/smolcluster/: __init__.py  discovery.py  main.py  server.py  train.py  train_mnist.py  worker.py
src/smolcluster/EDP/: server.py  worker.py
src/smolcluster/ElasticDistributedTraining/: server.py  worker.py
src/smolcluster/NoRingReduce/: server.py  worker.py
src/smolcluster/SimpleAllReduce/: server.py  worker.py
src/smolcluster/configs/: cluster_config.yaml  cluster_config_classicdp.yaml  cluster_config_ddp.yaml  cluster_config_dp.yaml  cluster_config_edp.yaml  cluster_config_ep.yaml  cluster_config_fsdp.yaml  cluster_config_mp.yaml  cluster_config_mp_no_ps.yaml  cluster_config_mp_pipeline.yaml  cluster_config_mp_ring.yaml  cluster_config_mp_without_ps.yaml  cluster_config_syncps.yaml  gpt_config.yaml  model_weights.yaml  moe_config.yaml  nn_config.yaml
src/smolcluster/dashboard/: __main__.py  node_manager.py  server.py
src/smolcluster/data/: __init__.py  prepare_dataset.py  wikitext.py
src/smolcluster/docs/: inference.md  setup_cluster.md
src/smolcluster/models/: SimpleNN.py  __init__.py  gpt.py  moe.py
src/smolcluster/tests/: README.md  conftest.py  test_expert_parallelism.py  test_gpt.py  test_ios.py  test_memory_footprint_skeleton.py  test_moe.py  train_mnist.py
src/smolcluster/utils/: __init__.py  checkpointing.py  cli.py  common_utils.py  convert_to_coreml.py  data.py  decoding.py  device.py  discovery.py  layers.py  logging_startup.py  logging_utils.py  model_downloader.py  quantization.py
src/smolcluster/wandb/: latest-run
(+168 files in other folders)
