[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolcluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=1.24.0",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
    "wandb>=0.17.0",
    "dotenv>=0.9.9",
    "safetensors>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "black",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["smolcluster*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
