[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolcluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=1.24.0",
    "packaging>=23.0",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
    "wandb>=0.17.0",
    "dotenv>=0.9.9",
    "safetensors>=0.7.0",
    "prometheus-client>=0.24.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "httpx>=0.24.0",
    "coremltools>=9.0",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "evaluate>=0.4.6",
    "ruamel-yaml>=0.19.1",
    "mlx>=0.31.1",
    "rouge-score>=0.1.2",
    "mlx-lm>=0.31.1",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "black",
    "build",
    "twine",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
eval = [
    "accelerate>=0.31.1",
    "deepeval>=3.9.6",
    "google-genai>=1.71.0",
    "scipy>=1.15.3",
]
mlx = [
    "mlx>=0.31.1",
    "mlx-lm>=0.31.1",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["smolcluster*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["src/smolcluster/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests as requiring CUDA (deselect with '-m \"not cuda\"')",
]

[tool.coverage.run]
source = ["src/smolcluster"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

